--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -39,6 +39,7 @@
      <Compile Include="Assets\Script\Bird.cs" />
      <Compile Include="Assets\Script\Monster.cs" />
      <Compile Include="Assets\Script\LevelController.cs" />
+     <Compile Include="Assets\Script\DragLine.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.3.15f2/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
@@ -671,6 +672,12 @@
     </Reference>
     <Reference Include="Unity.2D.IK.Runtime">
         <HintPath>C:/Users/akcho/Projects/Terrible Tweeters/Library/ScriptAssemblies/Unity.2D.IK.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="Cinemachine">
+        <HintPath>C:/Users/akcho/Projects/Terrible Tweeters/Library/ScriptAssemblies/Cinemachine.dll</HintPath>
+    </Reference>
+    <Reference Include="com.unity.cinemachine.editor">
+        <HintPath>C:/Users/akcho/Projects/Terrible Tweeters/Library/ScriptAssemblies/com.unity.cinemachine.editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.2D.Animation.Triangle.Runtime">
         <HintPath>C:/Users/akcho/Projects/Terrible Tweeters/Library/ScriptAssemblies/Unity.2D.Animation.Triangle.Runtime.dll</HintPath>
